--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">egllibrary</string>
     <string name="title_activity_light">LightActivity</string>
+    <string name="title_activity_matrix">MatrixActivity</string>
 </resources>
